# wealth-flightplan-platform

./: .env.example  .gitignore  MOCKUP.html  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: admin.py  assessments.py  auth.py  chatbot.py  content.py  deps.py  users.py  users_dashboard.py  worksheets.py
backend/app/core/: config.py  datetimes.py  errors.py  logging.py  security.py
backend/app/db/: database.py  models.py  types.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial_auth_tables.py  (+6 more)
backend/app/db/seeds/: phase3_content.py  phase4_worksheets.py
backend/app/schemas/: _base.py  admin.py  assessment.py  auth.py  chatbot.py  content.py  dashboard.py  worksheet.py
backend/app/services/: activity.py  assessment.py  assessment_content.py  audit.py  auth.py  calculator.py  chatbot.py  chatbot_prompts.py  content.py  dashboard.py  email.py  export.py  milestones.py  progress.py  rate_limit.py  recommendation_content.py  recommendations.py  redis_client.py  token_blacklist.py  worksheet.py  worksheet_content.py
backend/scripts/: entrypoint.sh  generate_keys.sh
backend/tests/: conftest.py  test_account_utilities.py  test_admin.py  test_assessment_api.py  test_assessment_scoring.py  test_auth_login.py  test_auth_password_reset.py  test_auth_refresh_logout.py  test_auth_register.py  test_auth_verify.py  test_calculator.py  test_chatbot.py  test_content_api.py  test_dashboard_api.py  test_meta.py  test_recommendations.py  test_services_unit.py  test_worksheet_api.py  test_worksheet_parity.py  test_worksheet_service.py
(+204 files in other folders)
