[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wealth-flightplan-backend"
version = "0.1.0"
description = "Wealth FlightPlan — Phase 1 Authentication API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110,<0.116",
  "uvicorn[standard]>=0.27,<0.31",
  "sqlalchemy[asyncio]>=2.0,<2.1",
  "asyncpg>=0.29,<0.31",
  "alembic>=1.13,<1.14",
  "pydantic>=2.6,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "python-jose[cryptography]>=3.3,<4.0",
  "passlib[bcrypt]>=1.7.4,<2.0",
  "bcrypt==4.0.1",
  "email-validator>=2.1,<3.0",
  "httpx>=0.27,<0.29",
  "redis>=5.0,<6.0",
  "slowapi>=0.1.9,<0.2",
  "python-multipart>=0.0.9,<0.1",
  "reportlab>=4.1,<5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<0.25",
  "pytest-cov>=4.1,<6.0",
  "aiosqlite>=0.20,<0.21",
  "ruff>=0.4,<0.8",
  "black>=24.3,<25.0",
  "respx>=0.21,<0.22",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501", "B008"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = false
concurrency = ["thread", "greenlet"]
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
